docs/sources/k6/v1.5.x/javascript-api/k6-browser/page/_index.md
---
title: 'Page'
description: 'Browser module: Page Class'
weight: 10
---

# Page

Page provides methods to interact with a single tab in a running web browser. A single [BrowserContext](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-browser/browsercontext) can have many `pages`.

| Method                                                                                                                                                      | Description                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            |
| ----------------------------------------------------------------------------------------------------------------------------------------------------------- | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| [$(selector)](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-browser/page/page-dollar)                                                          | Finds an element matching the specified `selector` within the page.                                                                                                                                                                                                                                                                                                                                                                                                                                                    |
| [$$(selector)](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-browser/page/page-doubledollar)                                                   | Finds all elements matching the specified `selector` within the page.                                                                                                                                                                                                                                                                                                                                                                                                                                                  |
| [bringToFront()](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-browser/page/bringtofront)                                                      | Activates a browser tab.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                               |
| [check(selector[, options])](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-browser/page/check/)                                                | Select the input checkbox.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                             |
| [click(selector[, options])](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-browser/page/click/)                                                | Clicks on an element matching a `selector`.                                                                                                                                                                                                                                                                                                                                                                                                                                                                            |
| [close()](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-browser/page/close)                                                                    | Closes a tab that the `page` is associated with.                                                                                                                                                                                                                                                                                                                                                                                                                                                                       |
| [content()](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-browser/page/content)                                                                | Gets the HTML contents of the page.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                    |
| [context()](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-browser/page/context)                                                                | Gets the [BrowserContext](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-browser/browsercontext) that the page belongs to.                                                                                                                                                                                                                                                                                                                                                                                 |
| [dblclick(selector[, options])](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-browser/page/dblclick/)                                          | With the [Mouse](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-browser/mouse), double click on an element matching the provided `selector`.                                                                                                                                                                                                                                                                                                                                                               |
| [dispatchEvent(selector, type, eventInit[, options])](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-browser/page/dispatchevent/)               | Dispatches HTML DOM event types e.g. `'click'`                                                                                                                                                                                                                                                                                                                                                                                                                                                                         |
| [emulateMedia([options])](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-browser/page/emulatemedia/)                                            | Changes the CSS media type and the color scheme feature.                                                                                                                                                                                                                                                                                                                                                                                                                                                               |
| [emulateVisionDeficiency(type)](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-browser/page/emulatevisiondeficiency)                            | Emulates your website with the specified vision deficiency `type`.                                                                                                                                                                                                                                                                                                                                                                                                                                                     |
| [evaluate(pageFunction[, arg])](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-browser/page/evaluate/)                                          | Returns the value of the `pageFunction` invocation.                                                                                                                                                                                                                                                                                                                                                                                                                                                                    |
| [evaluateHandle(pageFunction[, arg])](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-browser/page/evaluatehandle/)                              | Returns the value of the `pageFunction` invocation as a [JSHandle](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-browser/jshandle).                                                                                                                                                                                                                                                                                                                                                                       |
| [fill(selector, value[, options])](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-browser/page/fill/)                                           | Fill an `input`, `textarea` or `contenteditable` element with the provided value.                                                                                                                                                                                                                                                                                                                                                                                                                                      |
| [focus(selector[, options])](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-browser/page/focus/)                                                | Fetches an element with `selector` and focuses on it.                                                                                                                                                                                                                                                                                                                                                                                                                                                                  |
| [frames()](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-browser/page/frames)                                                                  | Returns an array of frames on the page.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                |
| [getAttribute(selector, name[, options])](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-browser/page/getattribute/)                            | Returns the element attribute value for the given attribute name.                                                                                                                                                                                                                                                                                                                                                                                                                                                      |
| [getByAltText(altText[, options])](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-browser/page/getbyalttext/)                                   | Returns a locator for elements with the specified `alt` attribute text.                                                                                                                                                                                                                                                                                                                                                                                                                                                |
| [getByLabel(text[, options])](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-browser/page/getbylabel/)                                          | Returns a locator for form controls with the specified label text.                                                                                                                                                                                                                                                                                                                                                                                                                                                     |
| [getByPlaceholder(placeholder[, options])](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-browser/page/getbyplaceholder/)                       | Returns a locator for input elements with the specified `placeholder` attribute text.                                                                                                                                                                                                                                                                                                                                                                                                                                  |
| [getByRole(role[, options])](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-browser/page/getbyrole/)                                            | Returns a locator for elements with the specified ARIA role.                                                                                                                                                                                                                                                                                                                                                                                                                                                           |
| [getByTestId(testId)](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-browser/page/getbytestid/)                                                 | Returns a locator for elements with the specified `data-testid` attribute.                                                                                                                                                                                                                                                                                                                                                                                                                                             |
| [getByText(text[, options])](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-browser/page/getbytext/)                                            | Returns a locator for elements containing the specified text.                                                                                                                                                                                                                                                                                                                                                                                                                                                          |
| [getByTitle(title[, options])](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-browser/page/getbytitle/)                                         | Returns a locator for elements with the specified `title` attribute.                                                                                                                                                                                                                                                                                                                                                                                                                                                   |
| [goto(url[, options])](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-browser/page/goto/)                                                       | Navigates to the specified `url`.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                      |
| [hover(selector[, options])](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-browser/page/hover/)                                                | Hovers over an element matching `selector`.                                                                                                                                                                                                                                                                                                                                                                                                                                                                            |
| [innerHTML(selector[, options])](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-browser/page/innerhtml/)                                        | Returns the `element.innerHTML`.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                       |
| [innerText(selector[, options])](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-browser/page/innertext/)                                        | Returns the `element.innerText`.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                       |
| [inputValue(selector[, options])](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-browser/page/inputvalue/)                                      | Returns `input.value` for the selected `input`, `textarea` or `select` element.                                                                                                                                                                                                                                                                                                                                                                                                                                        |
| [isChecked(selector[, options])](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-browser/page/ischecked/)                                        | Checks to see if the `checkbox` `input` type is selected or not.                                                                                                                                                                                                                                                                                                                                                                                                                                                       |
| [isClosed()](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-browser/page/isclosed) {{< docs/bwipt id="878" >}}                                  | Checks if the page has been closed.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                    |
| [isDisabled(selector[, options])](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-browser/page/isdisabled/)                                      | Checks if the element is `disabled`.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                   |
| [isEditable(selector[, options])](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-browser/page/iseditable/)                                      | Checks if the element is `editable`.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                   |
| [isEnabled(selector[, options])](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-browser/page/isenabled/)                                        | Checks if the element is `enabled`.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                    |
| [isHidden(selector[, options])](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-browser/page/ishidden/)                                          | Checks if the element is `hidden`.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                     |
| [isVisible(selector[, options])](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-browser/page/isvisible/)                                        | Checks if the element is `visible`.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                    |
| [keyboard](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-browser/page/keyboard)                                                                | Returns the [Keyboard](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-browser/keyboard) instance to interact with a virtual keyboard on the page.                                                                                                                                                                                                                                                                                                                                                          |
| [locator(selector[, options])](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-browser/page/locator)                                            | Returns a [Locator](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-browser/locator) for the given `selector`.                                                                                                                                                                                                                                                                                                                                                                                              |
| [mainFrame()](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-browser/page/mainframe)                                                            | Returns the page's main [Frame](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-browser/frame).                                                                                                                                                                                                                                                                                                                                                                                                             |
| [mouse](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-browser/page/mouse)                                                                      | Returns the [Mouse](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-browser/mouse) instance to interact with a virtual mouse on the page.                                                                                                                                                                                                                                                                                                                                                                   |
| [on(event, handler)](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-browser/page/on)                                                            | Registers a handler to be called whenever the specified event occurs.                                                                                                                                                                                                                                                                                                                                                                                                                                                  |
| [opener()](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-browser/page/opener)                                                                  | Returns the `page` that opened the current `page`.                                                                                                                                                                                                                                                                                                                                                                                                                                                                     |
| [press(selector, key[, options])](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-browser/page/press/)                                           | Focuses the element, and then presses the given `key` on the [Keyboard](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-browser/keyboard).                                                                                                                                                                                                                                                                                                                                                                  |
| [reload([options])](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-browser/page/reload/)                                                        | Reloads the current page.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                              |
| [route(url, handler)](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-browser/page/route/)                                                        | Adds a route to the page to modify network requests made by that page.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            |
| [screenshot([options])](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-browser/page/screenshot/)                                                | Returns a buffer with the captured screenshot from the web browser.                                                                                                                                                                                                                                                                                                                                                                                                                                                    |
| [selectOption(selector, values[, options])](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-browser/page/selectoption/)                          | Selects one or more options which match the values from a `<select>` element.                                                                                                                                                                                                                                                                                                                                                                                                                                          |
| [setContent(html[, options])](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-browser/page/setcontent/)                                          | Sets the supplied HTML string to the current page.                                                                                                                                                                                                                                                                                                                                                                                                                                                                     |
| [setChecked(selector, checked[, options])](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-browser/page/setchecked)                              | Sets the `checkbox` or `radio` input element's value to the specified checked or unchecked state.                                                                                                                                                                                                                                                                                                                                                                                                                      |
| [setDefaultNavigationTimeout(timeout)](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-browser/page/setdefaultnavigationtimeout)                 | Changes the navigation timeout for [page.goto(url[, options])](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-browser/page/goto/), [page.reload([options])](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-browser/page/reload/), [page.setContent(html[, options])](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-browser/page/setcontent/), and [page.waitForNavigation([options])](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-browser/page/waitfornavigation/) |
| [setDefaultTimeout(timeout)](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-browser/page/setdefaulttimeout)                                     | Changes the timeout for all the methods accepting a `timeout` option.                                                                                                                                                                                                                                                                                                                                                                                                                                                  |
| [setExtraHTTPHeaders(headers)](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-browser/page/setextrahttpheaders)                                 | Sets extra HTTP headers which will be sent with subsequent HTTP requests.                                                                                                                                                                                                                                                                                                                                                                                                                                              |
| [setInputFiles(selector, file[, options])](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-browser/page/setinputfiles)                           | Sets the file input element's value to the specified files.                                                                                                                                                                                                                                                                                                                                                                                                                                                            |
| [setViewportSize(viewportSize)](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-browser/page/setviewportsize)                                    | Updates the `page`'s width and height.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                 |
| [tap(selector[, options])](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-browser/page/tap/)                                                    | Taps the first element that matches the `selector`.                                                                                                                                                                                                                                                                                                                                                                                                                                                                    |
| [textContent(selector[, options])](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-browser/page/textcontent/)                                    | Returns the `element.textContent`.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                     |
| [throttleCPU(cpuProfile)](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-browser/page/throttlecpu)                                              | Throttles the CPU in Chrome/Chromium to slow it down by the specified `rate` in the `cpuProfile` object.                                                                                                                                                                                                                                                                                                                                                                                                               |
| [throttleNetwork(networkProfile)](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-browser/page/throttlenetwork)                                  | Throttles the network in Chrome/Chromium to slow it down by the specified fields in the `networkProfile` object.                                                                                                                                                                                                                                                                                                                                                                                                       |
| [title()](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-browser/page/title)                                                                    | Returns the `page`'s title.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            |
| [type(selector, text[, options])](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-browser/page/type/)                                            | Types the `text` in the first element found that matches the `selector`.                                                                                                                                                                                                                                                                                                                                                                                                                                               |
| [touchscreen](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-browser/page/touchscreen)                                                          | Returns the [Touchscreen](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-browser/touchscreen) instance to interact with a virtual touchscreen on the page.                                                                                                                                                                                                                                                                                                                                                 |
| [uncheck(selector[, options])](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-browser/page/uncheck/)                                            | Unselects an input `checkbox` element.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                 |
| [unroute(url)](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-browser/page/unroute/)                                            | Removes all existing routes for the `url`.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                 |
| [unrouteAll()](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-browser/page/unrouteall/)                                            | Removes all routes created with [`page.route()`](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-browser/page/route).                                                                                                                                                                                                                                                                                                                                                                                                                                                                                 |
| [url()](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-browser/page/url)                                                                        | Returns the `page`'s URL.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                              |
| [viewportSize()](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-browser/page/viewportsize)                                                      | Returns the `page`'s size (width and height).                                                                                                                                                                                                                                                                                                                                                                                                                                                                          |
| [waitForEvent(event[, optionsOrPredicate])](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-browser/page/waitforevent/)                           | Waits for the specified event to be emitted.                                                                                                                                                                                                                                                                                                                                                                                                                                                                           |
| [waitForFunction(pageFunction, arg[, options])](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-browser/page/waitforfunction/)                   | Returns when the `pageFunction` returns a truthy value.                                                                                                                                                                                                                                                                                                                                                                                                                                                                |
| [waitForLoadState(state[, options])](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-browser/page/waitforloadstate/) {{< docs/bwipt id="880" >}} | Waits for the given load `state` to be reached.                                                                                                                                                                                                                                                                                                                                                                                                                                                                        |
| [waitForNavigation([options])](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-browser/page/waitfornavigation/)                                  | Waits for the given navigation lifecycle event to occur and returns the main resource response.                                                                                                                                                                                                                                                                                                                                                                                                                        |
| [waitForRequest(urlPattern[, options])](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-browser/page/waitforrequest/)                          | Waits for an HTTP request that matches the specified URL pattern.                                                                                                                                                                                                                                                                                                                                                                                                                                                      |
| [waitForResponse(urlPattern[, options])](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-browser/page/waitforresponse/)                          | Waits for an HTTP response that matches the specified URL pattern.                                                                                                                                                                                                                                                                                                                                                                                                                                                      |
| [waitForSelector(selector[, options])](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-browser/page/waitforselector/)                            | Returns when element specified by selector satisfies `state` option.                                                                                                                                                                                                                                                                                                                                                                                                                                                   |
| [waitForTimeout(timeout)](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-browser/page/waitfortimeout)                                           | Waits for the given `timeout` in milliseconds.                                                                                                                                                                                                                                                                                                                                                                                                                                                                         |
| [waitForURL(url[, options])](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-browser/page/waitforurl/)                                           | Waits for the page to navigate to the specified URL.                                                                                                                                                                                                                                                                                                                                                                                                                                                                   |
| [workers()](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-browser/page/workers)                                                                | Returns an array of the dedicated [WebWorkers](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-browser/worker) associated with the page.                                                                                                                                                                                                                                                                                                                                                                    |
